--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2021</span> 
                         <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
-                        <span>Photo from Wikimedia Commons</span>
+                        <span>Photo adapted from Wikimedia Commons</span>
                     </div>
 
                     <div class="go-top">
