--- a/index.html
+++ b/index.html
@@ -164,15 +164,16 @@
             </p>
 
             <p>Mar 1, '21, 
-            <!--<b>Xiabing Ruan</b>, 
-            --> <a onclick="toggle_visibility('19');">
-                    <i>TBA</i></a><br />
+                <b>Siheng Yi</b>, 
+                <a onclick="toggle_visibility('19');">
+                    <i>Topological morphology descriptor and persistent images</i></a><br />
                 <div id="19" class="toshow" style="display:none">
-                    <li>TBA</li>
+                    <li><a href="papers/Kanari et al.pdf" target="_blank">A topological representation of branching neuronal morphologies</a></li>
+                    <li><a href="papers/Adams et al.pdf" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
                 </div>
             </p>
 
-            <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
+       <!-- <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
                 <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
                 <a onclick="toggle_visibility('20');">
                     <i>TBA</i></a><br />
@@ -180,7 +181,7 @@
                     TBA
                 </div>
             </p>
-
+        -->
 
 <h3>Talks in Fall 2020 (mostly Tuesdays 9&ndash;12 in Huiyuan 3-415)</h3>
 
