--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p>Mar 1, '21, 
                 <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('19');">
-                    <i>Topological morphology descriptor and persistent images</i></a><br />
+                    <i>Topological morphology descriptors and persistent images</i></a><br />
                 <div id="19" class="toshow" style="display:none">
                     <li><a href="papers/Kanari et al.pdf" target="_blank">A topological representation of branching neuronal morphologies</a></li>
                     <li><a href="papers/Adams et al.pdf" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
