--- a/index.html
+++ b/index.html
@@ -166,10 +166,12 @@
             <p>Mar 1, '21, 
                 <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('19');">
-                    <i>Topological morphology descriptors and persistent images</i></a><br />
+                    <i>Topological morphology descriptors and persistence images</i></a><br />
                 <div id="19" class="toshow" style="display:none">
                     <li><a href="papers/Kanari et al.pdf" target="_blank">A topological representation of branching neuronal morphologies</a></li>
                     <li><a href="papers/Adams et al.pdf" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
+                    <li><a href="papers/Kanari et al.pdf" target="_blank">Objective Morphological Classification of Neocortical Pyramidal Cells</a></li>
+                    <li><a href="notes/The notes of TMD and persistence image.pdf" target="_blank">nots</a></li>
                 </div>
             </p>
 
