--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                 <div id="19" class="toshow" style="display:none">
                     <li><a href="papers/Kanari et al.pdf" target="_blank">A topological representation of branching neuronal morphologies</a></li>
                     <li><a href="papers/Adams et al.pdf" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
-                    <li><a href="papers/Kanari et al.pdf" target="_blank">Objective Morphological Classification of Neocortical Pyramidal Cells</a></li>
-                    <li><a href="notes/The notes of TMD and persistence image.pdf" target="_blank">notes</a></li>
+                    <li><a href="papers/Kanari et al-2019.pdf" target="_blank">Objective Morphological Classification of Neocortical Pyramidal Cells</a></li>
+                    <li><a href="notes/TMD-PI.pdf" target="_blank">Notes</a></li>
                 </div>
             </p>
 
