--- a/index.html
+++ b/index.html
@@ -175,15 +175,24 @@
                 </div>
             </p>
 
-       <!-- <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
-                <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
+            <p>Mar 8, '21, 
+                <b>Siheng Yi and Jizhang Liu</b>, 
                 <a onclick="toggle_visibility('20');">
-                    <i>TBA</i></a><br />
+                    <i>Stability of persistence</i></a><br />
                 <div id="20" class="toshow" style="display:none">
+                    <li>Chapter VIII of Edelsbrunner&ndash;Harer</li>
+                </div>
+            </p>
+
+            <p>Mar 15, '21, 
+                <b>Siyu Cen</b>, 
+                <a onclick="toggle_visibility('21');">
+                    <i>TBA</i></a><br />
+                <div id="19" class="toshow" style="display:none">
                     TBA
                 </div>
             </p>
-        -->
+
 
 <h3>Talks in Fall 2020 (mostly Tuesdays 9&ndash;12 in Huiyuan 3-415)</h3>
 
