--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
                     <i>Stability of persistence</i></a><br />
                 <div id="20" class="toshow" style="display:none">
                     <li>Chapter VIII of Edelsbrunner&ndash;Harer</li>
+                    <li><a href="notes/VII1.pdf" target="_blank">Notes</a></li>
+                    <li><a href="notes/VII2.pdf" target="_blank">Notes</a></li>
+                    <li><a href="papers/Cohen-Steiner et al.pdf" target="_blank">Stability of Persistence Diagrams</a></li>
                 </div>
             </p>
 
