--- a/index.html
+++ b/index.html
@@ -190,9 +190,10 @@
             <p>Mar 15, '21, 
                 <b>Siyu Cen</b>, 
                 <a onclick="toggle_visibility('21');">
-                    <i>TBA</i></a><br />
+                    <i>Evolutionary de Rham-Hodge method</i></a><br />
                 <div id="21" class="toshow" style="display:none">
-                    TBA
+                    <li><a href="notes/evol-dr-hodge notes.pdf" target="_blank">Notes</a></li>
+                    <li><a href="papers/Evolutionary de Rham-Hodge method.pdf" target="_blank">Evolutionary de Rham-Hodge method</a></li>
                 </div>
             </p>
 
