--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                     <i>Stability of persistence</i></a><br />
                 <div id="20" class="toshow" style="display:none">
                     <li>Chapter VIII of Edelsbrunner&ndash;Harer</li>
-                    <li><a href="notes/VIII1.pdf" target="_blank">Notes1</a></li>
-                    <li><a href="notes/VIII2.pdf" target="_blank">Notes2</a></li>
+                    <li><a href="notes/VIII1.pdf" target="_blank">Notes 1</a></li>
+                    <li><a href="notes/VIII2.pdf" target="_blank">Notes 2</a></li>
                     <li><a href="papers/CSEH07.pdf" target="_blank">Stability of Persistence Diagrams</a></li>
                 </div>
             </p>
@@ -191,7 +191,7 @@
                 <a onclick="toggle_visibility('21');">
                     <i>Evolutionary de Rham-Hodge method</i></a><br />
                 <div id="21" class="toshow" style="display:none">
-                    <li><a href="notes/evol-dr-hodge notes.pdf" target="_blank">Notes</a></li>
+                    <li><a href="notes/evol-dr-hodge.pdf" target="_blank">Notes</a></li>
                     <li><a href="papers/CZTW20.pdf" target="_blank">Evolutionary de Rham-Hodge method</a></li>
                 </div>
             </p>
