--- a/student-seminar.html
+++ b/student-seminar.html
@@ -126,7 +126,7 @@
             <p>This is a student seminar on geometry and topology.  This semester, we will be working from Scorpan's 
                 <a href="Scorpan.pdf" target="_blank">The wild world of 4-manifolds</a>.  We meet on Thursdays 4:20&ndash;6:10 in Liyuan-1-203.</p>
             
-            <p><a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you want to register for credit</p>
+            <p><a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
   
 <!--
 <h3>Possible Topics</h3>
