--- a/student-seminar.html
+++ b/student-seminar.html
@@ -93,7 +93,7 @@
                
 
                                     <ul class="entry__meta">
-                                        <!--<li>Southern University of Science and Technology</li>-->
+                                        <li>Southern University of Science and Technology</li>
                                     </ul>
                                 </div>
                             </div> <!-- end entry__content -->
