--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                     <i>Topological morphology descriptors and persistence images</i></a><br />
                 <div id="19" class="toshow" style="display:none">
                     <li><a href="notes/TMD-PI.pdf" target="_blank">Notes</a></li>
-                    <li><a href="papers/Kanari'18.pdf" target="_blank">A topological representation of branching neuronal morphologies</a></li>
-                    <li><a href="papers/Adams'17.pdf" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
-                    <li><a href="papers/Kanari'19.pdf" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
+                    <li>Kanari et al, <a href="papers/Kanari'18.pdf" target="_blank">A topological representation of branching neuronal morphologies</a></li>
+                    <li>Adams et al, <a href="papers/Adams'17.pdf" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
+                    <li>Kanari et al, <a href="papers/Kanari'19.pdf" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
                 </div>
             </p>
 
@@ -182,7 +182,7 @@
                     <li>Chapter VIII of Edelsbrunner&ndash;Harer</li>
                     <li><a href="notes/VIII1.pdf" target="_blank">Notes 1</a></li>
                     <li><a href="notes/VIII2.pdf" target="_blank">Notes 2</a></li>
-                    <li><a href="papers/CSEH07.pdf" target="_blank">Stability of Persistence Diagrams</a></li>
+                    <li>Cohen-Steiner, Edelsbrunner, and Harer, <a href="papers/CSEH07.pdf" target="_blank">Stability of persistence diagrams</a></li>
                 </div>
             </p>
 
@@ -192,7 +192,7 @@
                     <i>Evolutionary de Rham-Hodge method</i></a><br />
                 <div id="21" class="toshow" style="display:none">
                     <li><a href="notes/evol-dr-hodge.pdf" target="_blank">Notes</a></li>
-                    <li><a href="papers/CZTW20.pdf" target="_blank">Evolutionary de Rham-Hodge method</a></li>
+                    <li>Chen, Zhao, Tong, and Wei, <a href="papers/CZTW20.pdf" target="_blank">Evolutionary de Rham-Hodge method</a></li>
                 </div>
             </p>
 
