--- a/student-seminar.html
+++ b/student-seminar.html
@@ -122,7 +122,7 @@
 <h3><a id="A"></a>About</h3>
 
             <p>This is a student seminar on geometry and topology.  This semester, we will be working from Scorpan's 
-                <a href="Scorpan.pdf" target="_blank">The wild world of 4-manifolds</a>.  We meet on Thursdays 4:20&ndash;6:10 in Liyuan-1-203.</p>
+                <a href="https://bookstore.ams.org/fourman" target="_blank">The wild world of 4-manifolds</a>.  We meet on Thursdays 4:20&ndash;6:10 in Liyuan-1-203.</p>
             
             <p><a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
   
