--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <h3><a id="A"></a>About</h3>
 
             <p>This is a reading seminar on applied/computational topology.  We will be working from Edelsbrunner and Harer's 
-                <a href="Edelsbrunner-Harer.pdf" target="_blank">Computational topology: an introduction</a>.  To supplement 
+                <a href="https://bookstore.ams.org/mbk-69/" target="_blank">Computational topology: an introduction</a>.  To supplement 
                 presentations by participants, we will also invite experts in the field to speak.</p>
             
             <p>Computational topology has become a subject that applies to a wide range of topics.  This includes pattern 
@@ -384,7 +384,7 @@
             <p>
                 <li><a href="References.pdf"_blank">Some references for computational topology</a></li>
                 <li>Herbert Edelsbrunner and John L. Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2572029" target="_blank">Computational topology: an introduction</a></li>
-                <li>Raúl Rabadán and Andrew J. Blumberg, <a href="https://www.amazon.com/Topological-Data-Analysis-Genomics-Evolution/dp/1107159547" target="_blank">Topological data analysis for genomics and evolution: topology in biology</a></li>
+                <li>Raúl Rabadán and Andrew J. Blumberg, <a href="https://www.cambridge.org/core/books/topological-data-analysis-for-genomics-and-evolution/FCC8429FAD2B5D1525AEA47A8366D6EB" target="_blank">Topological data analysis for genomics and evolution: topology in biology</a></li>
             </p>
 
 
