--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                     <i>Topological morphology descriptors and persistence images</i></a><br />
                 <div id="19" class="toshow" style="display:none">
                     <li><a href="notes/TMD-PI.pdf" target="_blank">Notes</a></li>
-                    <li>Kanari et al, <a href="https://link.springer.com/article/10.1007/s12021-017-9341-1" target="_blank">A topological representation of branching neuronal morphologies</a></li>
-                    <li>Adams et al, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3625712" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
-                    <li>Kanari et al, <a href="https://academic.oup.com/cercor/article/29/4/1719/5304727" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
+                    <li>Lida Kanari et al, <a href="https://link.springer.com/article/10.1007/s12021-017-9341-1" target="_blank">A topological representation of branching neuronal morphologies</a></li>
+                    <li>Henry Adams et al, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3625712" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
+                    <li>Lida Kanari et al, <a href="https://academic.oup.com/cercor/article/29/4/1719/5304727" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
                 </div>
             </p>
 
@@ -192,7 +192,7 @@
                     <i>Evolutionary de Rham-Hodge method</i></a><br />
                 <div id="21" class="toshow" style="display:none">
                     <li><a href="notes/evol-dr-hodge.pdf" target="_blank">Notes</a></li>
-                    <li>Chen, Zhao, Tong, and Wei, <a href="https://www.aimsciences.org/article/doi/10.3934/dcdsb.2020257" target="_blank">Evolutionary de Rham-Hodge method</a></li>
+                    <li>Jiahui Chen, Rundong Zhao, Yiying Tong, and Guo-Wei Wei, <a href="https://www.aimsciences.org/article/doi/10.3934/dcdsb.2020257" target="_blank">Evolutionary de Rham-Hodge method</a></li>
                 </div>
             </p>
 
@@ -382,9 +382,25 @@
 <h3><a id="R"></a>References</h3>
 
             <p>
-                <li><a href="References.pdf"_blank">Some references for computational topology</a></li>
+                <li>Henry Adams et al, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3625712" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
+                <li>Gunnar Carlsson, <a href="slides/Carlsson08.pdf" target="_blank">Topology and data</a></li>
+                <li>Gunnar Carlsson, <a href="https://www.ams.org/publications/journals/notices/201801/rnoti-p6.pdf" target="_blank">Topological modeling of complex data</a></li>
+                <li>Jiahui Chen, Rundong Zhao, Yiying Tong, and Guo-Wei Wei, <a href="https://www.aimsciences.org/article/doi/10.3934/dcdsb.2020257" target="_blank">Evolutionary de Rham-Hodge method</a></li>
+                <li>Cohen-Steiner, Edelsbrunner, and Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2279866" target="_blank">Stability of persistence diagrams</a></li>
+                <li>M. L. Connolly, <a href="http://scripts.iucr.org/cgi-bin/paper?s0021889885010779" target="_blank">Molecular surface Triangulation</a></li>
                 <li>Herbert Edelsbrunner and John L. Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2572029" target="_blank">Computational topology: an introduction</a></li>
+                <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="https://ieeexplore.ieee.org/document/6737251" target="_blank">Persistent homology of delay embeddings and its application to wheeze detection</a></li>
+                <li>Ingrid Irmer, <a href="References.pdf"_blank">Some references for computational topology</a></li>
+                <li>Lida Kanari et al, <a href="https://link.springer.com/article/10.1007/s12021-017-9341-1" target="_blank">A topological representation of branching neuronal morphologies</a></li>
+                <li>Lida Kanari et al, <a href="https://academic.oup.com/cercor/article/29/4/1719/5304727" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
+                <li>Washington Mio, <a href="https://www.sustech.edu.cn/zh/topological-analysis-of-structural-and-functional-data.html" target="_blank">Topological analysis of structural and functional data</a></li>
+                <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
                 <li>Raúl Rabadán and Andrew J. Blumberg, <a href="https://www.cambridge.org/core/books/topological-data-analysis-for-genomics-and-evolution/FCC8429FAD2B5D1525AEA47A8366D6EB" target="_blank">Topological data analysis for genomics and evolution: topology in biology</a></li>
+                <li>Michael T. Schaub et al, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=4094473" target="_blank">Random walks on simplicial complexes and the normalized Hodge 1-Laplacian</a></li>
+                <li>Guowei Wei, <a href="https://icm.sustech.edu.cn/science/15" target="_blank">Mathematical AI for drug discovery</a></li>
+                <li>Jie Wu, <a href="slides/Wu20.pdf" target="_blank">Topological data analysis and topological approaches to drug design and discovery</a></li>
+                <li>Yifan Wu, <a href="slides/Wu21.pdf" target="_blank">Persistent homology in time series analysis and its application to wheeze detection</a></li>
+                <li>Zhen Zhang, <a href="slides/Zhang20.pdf" target="_blank">Examples of graph data</a></li>
             </p>
 
 
