--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     <i>Self-intersection and simplification of surfaces</i></a><br />
                 <div id="5" class="toshow" style="display:none">
                     <li>Chapter II of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/II2.pdf" target="_blank">notes</a></li>
-                    <li><a href="http://scripts.iucr.org/cgi-bin/paper?s0021889885010779" target="_blank">Reference</a> for triangulation application example in talk</li>
+                    <li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1107/S0021889885010779" target="_blank">Reference</a> for triangulation application example in talk</li>
                 </div>
             </p>
         
@@ -387,7 +387,7 @@
                 <li>Gunnar Carlsson, <a href="https://www.ams.org/publications/journals/notices/201801/rnoti-p6.pdf" target="_blank">Topological modeling of complex data</a></li>
                 <li>Jiahui Chen, Rundong Zhao, Yiying Tong, and Guo-Wei Wei, <a href="https://www.aimsciences.org/article/doi/10.3934/dcdsb.2020257" target="_blank">Evolutionary de Rham-Hodge method</a></li>
                 <li>Cohen-Steiner, Edelsbrunner, and Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2279866" target="_blank">Stability of persistence diagrams</a></li>
-                <li>M. L. Connolly, <a href="http://scripts.iucr.org/cgi-bin/paper?s0021889885010779" target="_blank">Molecular surface Triangulation</a></li>
+                <li>Michael L. Connolly, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1107/S0021889885010779" target="_blank">Molecular surface triangulation</a></li>
                 <li>Herbert Edelsbrunner and John L. Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2572029" target="_blank">Computational topology: an introduction</a></li>
                 <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="https://ieeexplore.ieee.org/document/6737251" target="_blank">Persistent homology of delay embeddings and its application to wheeze detection</a></li>
                 <li>Ingrid Irmer, <a href="References.pdf"_blank">Some references for computational topology</a></li>
