--- a/student-seminar.html
+++ b/student-seminar.html
@@ -166,7 +166,7 @@
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2021</span> 
                         <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
-                        <span>Picture from Scopan, The wild world of 4-manifolds</span>
+                        <span>Picture from Scopan, <a href="https://bookstore.ams.org/fourman" target="_blank">The wild world of 4-manifolds</a></span>
                     </div>
 
                     <div class="go-top">
