--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <li>Michael L. Connolly, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1107/S0021889885010779" target="_blank">Molecular surface triangulation</a></li>
                 <li>Herbert Edelsbrunner and John L. Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2572029" target="_blank">Computational topology: an introduction</a></li>
                 <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="https://ieeexplore.ieee.org/document/6737251" target="_blank">Persistent homology of delay embeddings and its application to wheeze detection</a></li>
-                <li>Ingrid Irmer, <a href="References.pdf"_blank">Some references for computational topology</a></li>
+                <li>Ingrid Irmer, <a href="References.pdf" target="_blank">Some references for computational topology</a></li>
                 <li>Lida Kanari et al, <a href="https://link.springer.com/article/10.1007/s12021-017-9341-1" target="_blank">A topological representation of branching neuronal morphologies</a></li>
                 <li>Lida Kanari et al, <a href="https://academic.oup.com/cercor/article/29/4/1719/5304727" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
                 <li>Washington Mio, <a href="https://www.sustech.edu.cn/zh/topological-analysis-of-structural-and-functional-data.html" target="_blank">Topological analysis of structural and functional data</a></li>
