--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <a onclick="toggle_visibility('18');">
                     <i>Extended persistence, spectral sequences</i></a><br />
                 <div id="18" class="toshow" style="display:none">
-                    <li>Chapter VII of Edelsbrunner&ndash;Harer,  (cont'd)<a href="notes/VII3.pdf" target="_blank">notes</a></li>
+                    <li>Chapter VII of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/VII3.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
 
