--- a/index.html
+++ b/index.html
@@ -199,9 +199,27 @@
             <p>Mar 22, '21, 
                 <b>Xiabing Ruan</b>, 
                 <a onclick="toggle_visibility('22');">
-                    <i>TBA</i></a><br />
+                    <i>Applications of extended persistence to shape recognition and protein docking</i></a><br />
                 <div id="22" class="toshow" style="display:none">
-                    TBA
+                    <li>Pankaj K. Agarwal, Herbert Edelsbrunner, John Harer, and Yusu Wang, <a href="https://link.springer.com/article/10.1007/s00454-006-1265-8" target="_blank">Extreme elevation on a 2-manifold</a></li>
+                </div>
+            </p>
+
+            <p>Mar 29, '21, 
+                <b>Jizhang Liu</b>, 
+                <a onclick="toggle_visibility('23');">
+                    <i>Quiver representations and persistent homology</i></a><br />
+                <div id="23" class="toshow" style="display:none">
+                    <li>Steve Y. Oudot, <a href="http://www.ams.org/books/surv/209/" target="_blank">Persistence theory: from quiver representations to data analysis</a></li>
+                </div>
+            </p>
+
+            <p>Apr 12, '21, 
+                <b>Siheng Yi</b>, 
+                <a onclick="toggle_visibility('24');">
+                    <i>More on sliding window embeddings, persistent homology, and applications to audio signal processing</i></a><br />
+                <div id="24" class="toshow" style="display:none">
+                    <li>Hitesh Gakhar and Jose A. Perea, <a href="https://arxiv.org/abs/2103.04540" target="_blank">Sliding window persistence of quasiperiodic functions</a></li>
                 </div>
             </p>
 
@@ -383,6 +401,7 @@
 
             <p>
                 <li>Henry Adams et al, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3625712" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
+                <li>Pankaj K. Agarwal, Herbert Edelsbrunner, John Harer, and Yusu Wang, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2267546" target="_blank">Extreme elevation on a 2-manifold</a></li>
                 <li>Gunnar Carlsson, <a href="slides/Carlsson08.pdf" target="_blank">Topology and data</a></li>
                 <li>Gunnar Carlsson, <a href="https://www.ams.org/publications/journals/notices/201801/rnoti-p6.pdf" target="_blank">Topological modeling of complex data</a></li>
                 <li>Jiahui Chen, Rundong Zhao, Yiying Tong, and Guo-Wei Wei, <a href="https://www.aimsciences.org/article/doi/10.3934/dcdsb.2020257" target="_blank">Evolutionary de Rham-Hodge method</a></li>
@@ -390,10 +409,12 @@
                 <li>Michael L. Connolly, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1107/S0021889885010779" target="_blank">Molecular surface triangulation</a></li>
                 <li>Herbert Edelsbrunner and John L. Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2572029" target="_blank">Computational topology: an introduction</a></li>
                 <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="https://ieeexplore.ieee.org/document/6737251" target="_blank">Persistent homology of delay embeddings and its application to wheeze detection</a></li>
+                <li>Hitesh Gakhar and Jose A. Perea, <a href="https://arxiv.org/abs/2103.04540" target="_blank">Sliding window persistence of quasiperiodic functions</a></li>
                 <li>Ingrid Irmer, <a href="References.pdf" target="_blank">Some references for computational topology</a></li>
                 <li>Lida Kanari et al, <a href="https://link.springer.com/article/10.1007/s12021-017-9341-1" target="_blank">A topological representation of branching neuronal morphologies</a></li>
                 <li>Lida Kanari et al, <a href="https://academic.oup.com/cercor/article/29/4/1719/5304727" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
                 <li>Washington Mio, <a href="https://www.sustech.edu.cn/zh/topological-analysis-of-structural-and-functional-data.html" target="_blank">Topological analysis of structural and functional data</a></li>
+                <li>Steve Y. Oudot, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3408277" target="_blank">Persistence theory: from quiver representations to data analysis</a></li>
                 <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
                 <li>Raúl Rabadán and Andrew J. Blumberg, <a href="https://www.cambridge.org/core/books/topological-data-analysis-for-genomics-and-evolution/FCC8429FAD2B5D1525AEA47A8366D6EB" target="_blank">Topological data analysis for genomics and evolution: topology in biology</a></li>
                 <li>Michael T. Schaub et al, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=4094473" target="_blank">Random walks on simplicial complexes and the normalized Hodge 1-Laplacian</a></li>
