--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                 <a onclick="toggle_visibility('22');">
                     <i>Applications of extended persistence to shape recognition and protein docking</i></a><br />
                 <div id="22" class="toshow" style="display:none">
+                    <li><a href="notes/Notes_Elevation.pdf" target="_blank">Notes</a></li>
                     <li>Pankaj K. Agarwal, Herbert Edelsbrunner, John Harer, and Yusu Wang, <a href="https://link.springer.com/article/10.1007/s00454-006-1265-8" target="_blank">Extreme elevation on a 2-manifold</a></li>
                 </div>
             </p>
