--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <a onclick="toggle_visibility('19');">
                     <i>Topological morphology descriptors and persistence images</i></a><br />
                 <div id="19" class="toshow" style="display:none">
-                    <li><a href="notes/TMD-PI.pdf" target="_blank">Notes</a></li>
+                    <li><a href="notes/notes-tmd-pi.pdf" target="_blank">Notes</a></li>
                     <li>Lida Kanari et al, <a href="https://link.springer.com/article/10.1007/s12021-017-9341-1" target="_blank">A topological representation of branching neuronal morphologies</a></li>
                     <li>Henry Adams et al, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3625712" target="_blank">Persistence images: a stable vector representation of persistent homology</a></li>
                     <li>Lida Kanari et al, <a href="https://academic.oup.com/cercor/article/29/4/1719/5304727" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
@@ -191,7 +191,7 @@
                 <a onclick="toggle_visibility('21');">
                     <i>Evolutionary de Rham-Hodge method</i></a><br />
                 <div id="21" class="toshow" style="display:none">
-                    <li><a href="notes/evol-dr-hodge.pdf" target="_blank">Notes</a></li>
+                    <li><a href="notes/notes-evol-dr-hodge.pdf" target="_blank">Notes</a></li>
                     <li>Jiahui Chen, Rundong Zhao, Yiying Tong, and Guo-Wei Wei, <a href="https://www.aimsciences.org/article/doi/10.3934/dcdsb.2020257" target="_blank">Evolutionary de Rham-Hodge method</a></li>
                 </div>
             </p>
@@ -201,7 +201,7 @@
                 <a onclick="toggle_visibility('22');">
                     <i>Applications of extended persistence to shape recognition and protein docking</i></a><br />
                 <div id="22" class="toshow" style="display:none">
-                    <li><a href="notes/Notes_Elevation.pdf" target="_blank">Notes</a></li>
+                    <li><a href="notes/notes-elevation.pdf" target="_blank">Notes</a></li>
                     <li>Pankaj K. Agarwal, Herbert Edelsbrunner, John Harer, and Yusu Wang, <a href="https://link.springer.com/article/10.1007/s00454-006-1265-8" target="_blank">Extreme elevation on a 2-manifold</a></li>
                 </div>
             </p>
@@ -211,6 +211,7 @@
                 <a onclick="toggle_visibility('23');">
                     <i>Quiver representations and persistent homology</i></a><br />
                 <div id="23" class="toshow" style="display:none">
+                    <li><a href="notes/notes-quiver-rep.pdf" target="_blank">Notes</a></li>
                     <li>Steve Y. Oudot, <a href="http://www.ams.org/books/surv/209/" target="_blank">Persistence theory: from quiver representations to data analysis</a></li>
                 </div>
             </p>
