--- a/index.html
+++ b/index.html
@@ -225,6 +225,16 @@
                 </div>
             </p>
 
+            <p>Apr 19, '21, 
+                <b>Yifan Wu</b>, 
+                <a onclick="toggle_visibility('25');">
+                    <i>Reproducing results of the wheeze detection paper</i></a><br />
+                <div id="24" class="toshow" style="display:none">
+                    <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="https://ieeexplore.ieee.org/document/6737251" target="_blank">
+                        Persistent homology of delay embeddings and its application to wheeze detection</a></li>
+                </div>
+            </p>
+
 
 <h3>Talks in Fall 2020 (mostly Tuesdays 9&ndash;12 in Huiyuan 3-415)</h3>
 
