--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
             <p>May 10, '21, 
                 <b>Siyu Cen</b>, 
                 <a onclick="toggle_visibility('27');">
-                    <i>TBA</i></a><br />
+                    <i>Persistent Homology of Geospatial Data: A Case Study with Voting</i></a><br />
                 <div id="27" class="toshow" style="display:none">
-                    
+                    <li>Michelle Feng, Mason A. Porter , <a href="https://epubs.siam.org/doi/abs/10.1137/19M1241519" target="_blank">Persistent Homology of Geospatial Data: A Case Study with Voting</a></li>
                 </div>
             </p>
 
