--- a/grad.html
+++ b/grad.html
@@ -121,7 +121,7 @@
 
 <h3><a id="A"></a>About</h3>
 
-            <p>This is a postgraduate seminar on algebraic and geometric topology, selected topics includes spectral sequences, rational homotopy theory,...  </p>
+            <p>This is a postgraduate seminar on algebraic and geometric topology, selected topics includes spectral sequences, rational homotopy theory, infinity category, K-theory,...  </p>
             
             
 
