--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
             <p>May 17, '21, 
                 <b>Xiabing Ruan</b>, 
                 <a onclick="toggle_visibility('28');">
-                    <i>TBA</i></a><br />
+                    <i>Topological Analysis of Syntactic Structures</i></a><br />
                 <div id="28" class="toshow" style="display:none">
-                    
+                    <li>Alexander Port, Taelin Karidi and Matide Marcolli , <a href="https://arxiv.org/abs/1903.05181" target="_blank">Topological Analysis of Syntactic Structures</a></li>
                 </div>
             </p>
 
