--- a/grad.html
+++ b/grad.html
@@ -133,7 +133,7 @@
                 <a onclick="toggle_visibility('17');">
                     <i>Introduction to Spectral sequences II</i></a><br />
                 <div id="17" class="toshow" style="display:none">
-                    <li><a href="slides/SS2.0510.pdf" target="_blank">Notes</a></li>
+                    <li><a href="slides/SS.0510.pdf" target="_blank">Notes</a></li>
                     <li> John McCleary, <a href="http://libgen.rs/book/index.php?md5=B5849DE9EE56C9570EA7FBB1F7B992A6" target="_blank">A User's Guide to Spectral Sequences (2rd)</a></li>
                 </div>
             </p>
