--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
                 <a onclick="toggle_visibility('28');">
                     <i>Persistent homology for data of syntactic structures of world languages</i></a><br />
                 <div id="28" class="toshow" style="display:none">
+                    <li><a href="notes/notes-syntactic.pdf" target="_blank">Notes</a></li>
                     <li>Alexander Port, Taelin Karidi, and Matide Marcolli , <a href="https://arxiv.org/abs/1903.05181" target="_blank">Topological analysis of syntactic structures</a></li>
                 </div>
             </p>
