--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
                 <a onclick="toggle_visibility('27');">
                     <i>Persistent homology for geospatial data of voting</i></a><br />
                 <div id="27" class="toshow" style="display:none">
+                    <li><a href="notes/notes-voting.pdf" target="_blank">Notes</a></li>
                     <li>Michelle Feng and Mason A. Porter , <a href="https://doi.org/10.1137/19M1241519" target="_blank">Persistent homology of geospatial data: a case study with voting</a></li>
                 </div>
             </p>
