--- a/undergrad.html
+++ b/undergrad.html
@@ -125,6 +125,15 @@
                 <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2136212" target="_blank">The wild world of 4-manifolds</a>.  We meet on Thursdays 4:20&ndash;6:10 in Liyuan-1-203.</p>
             
             <p><a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
+    
+    <p>Mar 11 '21, 
+                <b>Wenbo Liao</b>, 
+                <a onclick="toggle_visibility('14');">
+                    <i>More Morse theory</i></a><br />
+                <div id="14" class="toshow" style="display:none">
+                    <li>Chapter VI of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/VI1.pdf" target="_blank">notes</a></li>
+                </div>
+            </p>
   
 <!--
 <h3>Possible Topics</h3>
