--- a/undergrad.html
+++ b/undergrad.html
@@ -131,7 +131,7 @@
                 <a onclick="toggle_visibility('14');">
                     <i>More Morse theory</i></a><br />
                 <div id="14" class="toshow" style="display:none">
-                    <li>Chapter VI of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/VI1.pdf" target="_blank">notes</a></li>
+                    <li><a href="notes/VI1.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
   
