--- a/undergrad.html
+++ b/undergrad.html
@@ -144,7 +144,7 @@
             </p>
   
     <p>Mar 25 '21, 
-                <b>Ruoyu xu</b>, 
+                <b>Ruoyu Xu</b>, 
                 <a onclick="toggle_visibility('14');">
                     <i>The Whitney trick</i></a><br />
                 <div id="14" class="toshow" style="display:none">
