--- a/grad.html
+++ b/grad.html
@@ -136,8 +136,7 @@
                 <div id="1" class="toshow" style="display:none">
                     In this talk, I will introduce homotopy coherence problems as the motivation
 of ∞-categories and give a brief introduction to ∞-categories. Most of topological invariants are homotopy invariants and many important functors are
-representable in the homotopy category of spaces, for example, ordinary co-
-homology, K-theory and cobordism theory (Brown representability theorem),
+representable in the homotopy category of spaces, for example, ordinary cohomology, K-theory and cobordism theory (Brown representability theorem),
 which shows the need for homotopy category of spaces. However, there must be
 loss of information when passing to homotopy category. An important problem
 to measure how much the data lose is: Can a homotopy commutative diagram
