--- a/grad.html
+++ b/grad.html
@@ -151,7 +151,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.
             <p>Apr 26, '21, 
                 <b>Tongtong Liang</b>, 
                 <a onclick="toggle_visibility('2');">
-                    <i>Introduction to spectral sequences I</i></a><br />
+                    <i>Introduction to spectral sequences</i></a><br />
                 <div id="2" class="toshow" style="display:none">
                     
                 </div>
@@ -160,7 +160,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.
             <p><a href="slides/SS.0510.pdf" target="_blank"><b>[Slides]</b></a> May 10, '21, 
                 <b>Pengcheng Li</b>, 
                 <a onclick="toggle_visibility('3');">
-                    <i>Introduction to spectral sequences II</i></a><br />
+                    <i>Introduction to spectral sequences, II</i></a><br />
                 <div id="3" class="toshow" style="display:none">
             <li>John McCleary, <a href="https://doi.org/10.1017/CBO9780511626289" target="_blank">A user's guide to spectral sequences (2nd edition)</a></li>
                 </div>
