--- a/grad.html
+++ b/grad.html
@@ -121,8 +121,8 @@
 
 <h3><a id="A"></a>About</h3>
 
-            <p>This is a graduate-level seminar on algebraic and geometric topology. Topics 
-                include spectral sequences, rational homotopy theory, infinity categories, K-theory, etc., depending on common interests of the participants.</p>
+            <p>This is a graduate-level seminar on algebraic and geometric topology.  
+               Topics are selected from common interests of the participants.</p>
             
             
 
