--- a/undergrad.html
+++ b/undergrad.html
@@ -121,7 +121,7 @@
 
 <h3><a id="A"></a>About</h3>
 
-            <p>This is an undergraduate-level seminar on geometry and topology.  This semester, we will be working from Scorpan's 
+            <p>This is an undergraduate student seminar on geometry and topology.  This semester, we will be working from Scorpan's 
                 <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2136212" target="_blank">The wild world of 4-manifolds</a>.  We meet on Thursdays 4:20&ndash;6:10 in Liyuan-1-203.</p>
             
             <p><a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
