--- a/grad.html
+++ b/grad.html
@@ -129,12 +129,12 @@
 
 <h3><a id="T"></a>Talks in Spring 2021 (mostly Mondays 4:30&ndash;5:30 in Yidan Library 307)</h3>
 
-            <p><a href="slides/Liang21.pdf" target="_blank"><b>[Slides]</b></a> Apr 19, '21, 
+            <p>Apr 19, '21, 
                 <b>Tongtong Liang</b>, 
                 <a onclick="toggle_visibility('1');">
                     <i>Homotopy coherence problem and ∞-categories</i></a><br />
                 <div id="1" class="toshow" style="display:none">
-                    In this talk, I will introduce homotopy coherence problems as the motivation
+                    <li>Abstract: In this talk, I will introduce homotopy coherence problems as the motivation
 of ∞-categories and give a brief introduction to ∞-categories. Most of topological invariants are homotopy invariants and many important functors are
 representable in the homotopy category of spaces, for example, ordinary cohomology, K-theory and cobordism theory (Brown representability theorem),
 which shows the need for homotopy category of spaces. However, there must be
@@ -144,7 +144,8 @@ in the category of space be replaced by a strictly commutative diagram by a
 natural transformation up to homotopy equivalence? Dywer, Kan and Smith
 pointed out in 1989 that the necessary and sufficient condition is homotopy
 coherence. However, it is very complicated to describe the phenomenon of homotopy coherence by ordinary categories. Therefore, we need a new framework
-to do with homotopy coherence problem and ∞-categories are what we need.
+to do with homotopy coherence problem and ∞-categories are what we need.</li>
+                    <li><a href="slides/Liang21.pdf" target="_blank">Slides</a></li>
                 </div>
             </p>
 
@@ -157,12 +158,13 @@ to do with homotopy coherence problem and ∞-categories are what we need.
                                     </div>
             </p>
 
-            <p><a href="slides/SS.0510.pdf" target="_blank"><b>[Slides]</b></a> May 10, '21, 
+            <p>May 10, '21, 
                 <b>Pengcheng Li</b>, 
                 <a onclick="toggle_visibility('3');">
                     <i>Introduction to spectral sequences, II</i></a><br />
                 <div id="3" class="toshow" style="display:none">
             <li>John McCleary, <a href="https://doi.org/10.1017/CBO9780511626289" target="_blank">A user's guide to spectral sequences (2nd edition)</a></li>
+                    <li><a href="slides/SS.0510.pdf" target="_blank">Slides</a></li>
                 </div>
             </p>
 
