--- a/grad.html
+++ b/grad.html
@@ -127,7 +127,7 @@
             
 
 
-<h3><a id="T"></a>Talks in Spring 2021 (mostly Mondays 4:30&ndash;5:30 in Yidan Library 307)</h3>
+<h3><a id="T"></a>Talks (mostly Mondays 4:30&ndash;5:30 in Yidan Library 307)</h3>
 
             <p>Apr 19, '21, 
                 <b>Tongtong Liang</b>, 
