--- a/grad.html
+++ b/grad.html
@@ -134,7 +134,7 @@
                 <a onclick="toggle_visibility('1');">
                     <i>Homotopy coherence problem and ∞-categories</i></a><br />
                 <div id="1" class="toshow" style="display:none">
-                    <li>Abstract: In this talk, I will introduce homotopy coherence problems as the motivation
+                    <li>In this talk, I will introduce homotopy coherence problems as the motivation
 of ∞-categories and give a brief introduction to ∞-categories. Most of topological invariants are homotopy invariants and many important functors are
 representable in the homotopy category of spaces, for example, ordinary cohomology, K-theory and cobordism theory (Brown representability theorem),
 which shows the need for homotopy category of spaces. However, there must be
