--- a/grad.html
+++ b/grad.html
@@ -173,6 +173,8 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('4');">
                     <i>Rational homotopy theory</i></a><br />
                 <div id="4" class="toshow" style="display:none">
+                    <li>Yves Felix, Stephen Halperin, Jean-Claude Thomas, Rational Homotopy Theory (GTM205)</a></li>
+                    <li><a href="notes/rational homotopy theory(1).pdf" target="_blank">Slides</a></li>
                     </div>
             </p>
 
