--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
                 <a onclick="toggle_visibility('29');">
                     <i>Persistent homology applied in classification and variation dectection of plant morphology</i></a><br/>
                 <div id="29" class="toshow" style="display:none">
+                    <li>Yuqing Xing,<a href="slides/plants.pdf" target="_blank"> Slides</a></li>
                     <li>Mao Li et al , <a href="https://www.frontiersin.org/articles/10.3389/fpls.2018.00553/full" target="_blank">Topological Data Analysis as a Morphometric Method: Using Persistent Homology to Demarcate a Leaf Morphospace</a></li>
                     <li>Mao Li et al , <a href="https://academic.oup.com/plphys/article/177/4/1382/6117122" target="_blank">The Persistent Homology Mathematical Framework Provides Enhanced Genotype-to-Phenotype Associations for Plant Morphology</a></li>     
                 </div>
